src/index.scss
// Importing fonts
@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');

// Variables for light theme
:root {
    --bg-primary: #fafafa;
    --text-primary: #000000;
    --text-secondary: #e0e0e0;
}

// Variables for dark theme
.dark-mode {
    --bg-primary: #2f2f2f;
    --text-primary: #ffffff;
    --text-secondary: #e0e0e0;
}

body {
    padding: 0;
    margin: 0;
    background: var(--bg-primary);
    color: var(--text-primary);
    font-family: 'Varela Round', sans-serif;
    // Transition for dark mode
    transition: all 0.2s;
}

.body-wrapper {
    width: 1100px;
    max-width: 90%;
    margin: 0 auto;
}

a {
    color: var(--text-primary);
    text-decoration: none;

    &:hover {
        text-decoration: underline;
    }
}

.MuiTooltip-tooltip {
    font-size: 1em !important;
}

